# SuperAI

./: .env.example  .gitignore  API_V2.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_V2.md  AUDIT_REPORT.md  CLOUD_SPACE_PLACEMENT_V2.md  CURRENT_MODEL_AUDIT.md  DESCRIPTION.md  DIALOGUE_V2_5_PLAN.md  HIVE_DYNAMIC_GRAVITY.md  HIVE_EVICTION.md  HIVE_JSON_EXPORT.md  HIVE_LOCAL_MEMORY_AUDIT.md  HIVE_LOCAL_MEMORY_TESTS.md  HIVE_LOCAL_ROUTING.md  HIVE_MERGE_RULES.md  HIVE_REASONING_STEPS.md  HIVE_RESONANCE.md  HIVE_SNAPSHOTS.md  HIVE_VIBRATION_ARCHITECTURE.md  HIVE_VIBRATION_AUDIT.md  HIVE_VIBRATION_TESTS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTED_CHANGES_V3.md  MIGRATION_V2.md  MODEL_INVARIANTS.md  MODEL_V2_RESET.md  NORMALIZED_API_V2.md  PARTIAL_BEE_SEARCH.md  PLAN.md  PLAN2.md  PLAN3.md  PLAN_GRAVITY.md  README.md  SCENE_COMPONENTS.md  TASK_PLAN.md  TESTING.md  TEST_SCENARIOS.md  TRAINING_TELEMETRY.md  (+42 more)
data/: basic_dialogues_ru.jsonl  examples.jsonl  spc_dialogues.jsonl  tatoeba_ru_en.jsonl  top_layer_curriculum.jsonl
docs/: CONTINUOUS_SPACE.md  algorithm.md  architecture.md  data_sources.md  decoding.md  examples.md  training.md  understanding.md  web.md
plans/: 00-architecture-decisions.md  01-client-first.md  02-runtime-and-storage.md  03-hive-memory.md  04-cosmos-and-execution.md  05-learning-and-evolution.md  06-roadmap-and-validation.md  07-legacy-reuse.md  README.md  plan-cosmos-omega.md
scripts/: run_web.py
semantic_ants/: __init__.py  __main__.py  cli.py  engine.py  jobs.py  mass_train.py  physics.py  preprocess.py  server.py  state.py  tokenizer.py  training.py
semantic_ants.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  database.py  physics.py  server.py  tokenizer.py  training.py
superai/: __init__.py  api.py  benchmark.py  cli.py  contracts.py  cosmos.py  database.py  execution.py  hive.py  learning.py  observability.py  runtime.py  service.py  storage.py
tests/: conftest.py  fixtures.py  test_acceleration.py  test_aco_learning.py  test_action_concepts.py  test_api_modules.py  test_cache_checkpoint.py  test_capacity.py  test_cli.py  test_conceptnet_seed.py  test_contextual_semantics.py  test_decoding.py  (+41 more)
(+420 files in other folders)
