[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superai"
version = "0.1.0"
description = "Trace-first local modular AI runtime"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "SuperAI" }]
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
superai = "superai.cli:main"

[tool.setuptools.packages.find]
include = ["superai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
