[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superai"
version = "0.1.0"
description = "SuperAI - Semantic Space Training with Gravitational Physics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pymorphy3>=2.0.6",
    "numpy>=1.26.4,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
acceleration = [
    "scipy==1.13.1",
    "scikit-learn==1.6.1",
    "rustworkx==0.17.1",
    "faiss-cpu==1.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
